# eagle

./: .gitattributes  .gitmodules  Eagle-iOS.podspec  Package.swift  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  documentation.md  documentation.yml  feature_request.md
.github/workflows/: android-appcenter.yml  android-browserstack.yml  android-demos.yml  android-devicefarm.yml  android-perf.yml  android-upload.yml  c-codestyle.yml  c-demos.yml  ios-appcenter.yml  ios-browserstack.yml  ios-demos.yml  ios-devicefarm.yml  ios-perf.yml  ios-validate.yml  java-codestyle.yml  link-check.yml  nodejs-codestyle.yml  nodejs-demos.yml  nodejs-perf.yml  nodejs.yml  python-codestyle.yml  python-demos.yml  python-perf.yml  python.yml  spell-check.yml  swift-codestyle.yml  web-codestyle.yml  web-demos.yml  web-perf.yml  web.yml
binding/android/: README.md
binding/ios/: Eagle-iOS.podspec  Eagle.swift  EagleBase.swift  EagleErrors.swift  EagleProfile.swift  EagleProfiler.swift  README.md
binding/nodejs/: README.md  copy.js  package.json
binding/python/: .gitignore  README.md  __init__.py  _eagle.py  _factory.py  _util.py  setup.py  test_eagle.py  test_eagle_perf.py
binding/web/: .eslintrc.js  .gitignore  README.md  cypress.config.ts  package.json
demo/c/: CMakeLists.txt  README.md  eagle_demo_file.c  eagle_demo_mic.c
demo/c/test/: test_eagle_c.py
demo/ios/: README.md
demo/nodejs/: README.md  file.js  mic.js  package.json
demo/python/: .gitignore  README.md  eagle_demo_file.py  eagle_demo_mic.py  setup.py  (+1 more)
include/: picovoice.h  pv_eagle.h
(+143 files in other folders)
